--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -27,7 +27,7 @@ body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
-  background: linear-gradient(to bottom, #ffffff, #f5f5f5 250px);
+  background: #f5f5f5;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
