--- a/static/scss/dashboard.scss
+++ b/static/scss/dashboard.scss
@@ -8,6 +8,15 @@ $featureImgMobileWidth: 343px;
     display: flex;
     flex-direction: row;
 
+    &.no-enrollments {
+      flex-direction: column;
+
+      a {
+        color: black;
+        text-decoration: underline;
+      }
+    }
+
     h4 a {
       text-decoration: underline;
     }
@@ -46,16 +55,5 @@ $featureImgMobileWidth: 343px;
   @include media-breakpoint-down(md) {
     margin-top: 32px;
     margin-bottom: 30px;
-  }
-}
-
-.placeholder-card {
-  background-color: white;
-  border: 0;
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.23);
-
-  a {
-    color: black;
-    text-decoration: underline;
   }
 }
