--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -109,16 +109,24 @@
       <section class="text-block">
         <div class="container">
           <div class="text-holder">
-            <div class="about-text">
+            {% if page.about %}
+            <div class="content-data">
               <h2>About this course</h2>
               {{ page.about |richtext }}
             </div>
-            {% if page.prerequisites %}
-              <h2>Prerequisites</h2>
-              {{ page.prerequisites |richtext }}
             {% endif %}
-            <h2>What you’ll learn</h2>
-            {{ page.what_you_learn |richtext }}
+            {% if page.what_you_learn %}
+            <div class="content-data">
+              <h2>What you’ll learn</h2>
+              {{ page.what_you_learn |richtext }}
+            </div>
+            {% endif %}
+            {% if page.prerequisites %}
+              <div class="content-data">
+                <h2>Prerequisites</h2>
+                {{ page.prerequisites |richtext }}
+              </div>
+            {% endif %}
           </div>
         </div>
       </section>
