--- a/static/scss/product-details.scss
+++ b/static/scss/product-details.scss
@@ -45,7 +45,7 @@
           padding: 0 0 30px;
         }
         @include media-breakpoint-up(lg) {
-          width: calc(100% - 455px);
+          width: calc(100% - 497px);
           padding: 0 15px;
           box-sizing: border-box;
         }
@@ -57,7 +57,7 @@
         &.video {
           padding-bottom: 0;
           @include media-breakpoint-up(lg) {
-            width: 455px;
+            width: 497px;
             padding: 12px 15px;
             flex-shrink: 0;
           }
@@ -142,7 +142,7 @@
 
       .stat-col {
         margin: 0 8px 16px;
-        background: $very-light-gray;
+        background: $white;
         border-radius: 3px;
         overflow: hidden;
         text-align: center;
@@ -150,6 +150,7 @@
         flex-flow: column;
         flex-grow: 1;
         width: calc(50% - 16px);
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
 
         @include media-breakpoint-up(lg) {
           width: auto;
@@ -182,7 +183,7 @@
         align-items: center;
         justify-content: center;
         box-sizing: border-box;
-        font-size: 14px;
+        font-size: 13px;
 
         p {
           margin: 0;
@@ -236,6 +237,13 @@
         font-weight: 700;
         color: $black;
       }
+
+      .content-data {
+        @include media-breakpoint-up(md) {
+          padding-bottom: 20px;
+        }
+      }
+
     }
 
     .more {
