--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -103,26 +103,30 @@
               </div>
             </div>  
             {% endif %}
-            {% if page.prerequisites %}
-            <div class="stat-col large">
-              <div class="title">prerequisites</div>
-              <div class="text">
-                <div>{{ page.prerequisites | richtext }}</div>
-              </div>
-            </div>
-            {% endif %}
           </div>
         </div>
       </section>
       <section class="text-block">
         <div class="container">
           <div class="text-holder">
-            <div class="about-text">
+            {% if page.about %}
+            <div class="content-data">
               <h2>About this course</h2>
               {{ page.about |richtext }}
             </div>
-            <h2>What you’ll learn</h2>
-            {{ page.what_you_learn |richtext }}
+            {% endif %}
+            {% if page.what_you_learn %}
+            <div class="content-data">
+              <h2>What you’ll learn</h2>
+              {{ page.what_you_learn |richtext }}
+            </div>
+            {% endif %}
+            {% if page.prerequisites %}
+              <div class="content-data">
+                <h2>Prerequisites</h2>
+                {{ page.prerequisites |richtext }}
+              </div>
+            {% endif %}
           </div>
         </div>
       </section>
