--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -15,10 +15,10 @@
   <div class="container hero-content">
     <div class="hero-title">
       {% if page.hero_title %}
-        <h1>{{ page.hero_title }}</h1>
+        <h2>{{ page.hero_title }}</h2>
       {% endif %}
       {% if page.hero_subtitle %}
-        <h2>{{ page.hero_subtitle }}</h2>
+        <h3>{{ page.hero_subtitle }}</h3>
       {% endif %}
     </div>
   </div>
@@ -33,7 +33,7 @@
       <li>
         <div class="course-card highlight-card">
           <a href="{{ product.url_path }}" class="course-card-link">
-            <img src="{% feature_img_src product.feature_image %}" alt="Featured course image">
+            <img src="{% feature_img_src product.feature_image %}" alt="">
             <div class="course-info">
               <h2 class="course-card-title">
                   {{ product.title }}
