--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -34,5 +34,5 @@ $footer-border: #686461;
 
 $dc-background: #f2f2f2;
 $subtitle-color: #ff4a68;
-$sirocco: #758080;
+$sirocco: #465a5b;
 $brand-button-bg: #a41e34
