--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 
 {% block content %}
-<div id="login-page">
+<div id="register-page">
   <h2>Register</h2>
   <form method="post" action="{% url 'social:complete' 'email' %}">
     {% csrf_token %}
