Fixed 'enrolled' UI regression

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -27,7 +27,7 @@
                         Enrolled &#10003;
                       </a>
                     {% else %}
-                      <div class="btn btn-primary btn-gradient-red highlight">
+                      <div class="btn btn-primary btn-gradient-red highlight outline">
                         Enrolled &#10003;
                       </div>
                     {% endif %}
