--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -389,6 +389,10 @@
 
   .modal-content {
     padding: 5px 12px;
+    
+    .required {
+      color: $brand-button-bg;
+    }
   }
 
   .modal-header {
