--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -48,8 +48,8 @@
               </div>
               {% if course_runs|length > 1 %}
                 <strong class="more-dates">
-                  <button class="dates-tooltip" id="datesPopover" data-trigger="click" data-toggle="popover" data-placement="auto" title="More dates available" data-html="true"
-                    data-content="
+                  <button class="dates-tooltip" id="datesPopover" data-bs-trigger="click" data-bs-toggle="popover" data-bs-placement="auto" title="More dates available" data-bs-html="true"
+                    data-bs-content="
                       <div>
                         <p>Click below to enroll in one of these dates</p>
                       </div>
