--- a/frontend/public/scss/top-app-bar.scss
+++ b/frontend/public/scss/top-app-bar.scss
@@ -75,7 +75,7 @@ header.site-header {
     display: block;
   }
 
-  li[data-toggle="collapse"] {
+  li[data-bs-toggle="collapse"] {
     display: block;
     padding: 10px 0;
     margin: 0 auto;
