--- a/frontend/public/scss/top-app-bar.scss
+++ b/frontend/public/scss/top-app-bar.scss
@@ -100,13 +100,6 @@ header.site-header {
   display: none;
   margin: 0;
 
-  &.collapsing,
-  &.show {
-    @include media-breakpoint-down(sm) {
-      display: block;
-    }
-  }
-
   @include media-breakpoint-up(md) {
     display: block;
 
@@ -115,24 +108,23 @@ header.site-header {
     }
   }
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     position: absolute;
     padding-top: 70px;
     left: 0;
     right: 0;
     bottom: -10px;
-    height: auto !important;
+    top: 50px;
+    height: 100%;
     z-index: 9999;
     background: rgba(0, 0, 0, 0.91);
+
+    &.collapsing,
+    &.show {
+        display: block;
+    }
   }
 
-  @include media-breakpoint-between(sm, md) {
-    top: 66px;
-  }
-
-  @include media-breakpoint-down(sm) {
-    top: 50px;
-  }
 }
 
 .site-logo {
