Set bg-danger to lighter red
Sets the background color of the upsell card badge to a lighter red color if bg-danger is used.

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -361,7 +361,7 @@
         }
 
         span.bg-danger {
-          background-color: #fae8e8;
+          background-color: #fae8e8 !important;
           color: #b43e3e;
         }
       }
