Align price with upsell card title

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -352,6 +352,7 @@
       div.upsell-header {
         margin-left: 0;
         margin-right: 0;
+        clear: both;
 
         span.badge {
           font-weight: normal;
