rebase + small design tweaks

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -58,7 +58,7 @@
                             {% if course_run.is_not_beyond_enrollment %}
                               <button class='date-link' id='{{ course_run.courseware_id }}' >Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
                             {% else %}
-                              <p id='{{ course_run.courseware_id }}' >{{ course_run.start_date|date:'F j, Y' }} (enrollment opens {{ course_run.enrollment_start|date:'F j, Y' }})</p>
+                              <p class='date-link-disabled' id='{{ course_run.courseware_id }}' >{{ course_run.start_date|date:'F j, Y' }}(enrollment opens {{ course_run.enrollment_start|date:'F j, Y' }})</p>
                             {% endif %}
                           </div>
                       {% endfor %}
