--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -55,7 +55,11 @@
                       </div>
                       {% for course_run in course_runs %}
                           <div>
-                            <button class='date-link' id='{{ course_run.courseware_id }}' >Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
+                            {% if course_run.is_not_beyond_enrollment %}
+                              <button class='date-link' id='{{ course_run.courseware_id }}' >Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
+                            {% else %}
+                              <p class='date-link-disabled' id='{{ course_run.courseware_id }}' >{{ course_run.start_date|date:'F j, Y' }}(enrollment opens {{ course_run.enrollment_start|date:'F j, Y' }})</p>
+                            {% endif %}
                           </div>
                       {% endfor %}
                     ">
