--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -4,66 +4,135 @@
 #course-catalog-navigation {
     display: flex;
 
-    #tab-count-row {
+    #tab-row {
+        margin-left: 0;
+        height: 70px;
+    }
+
+    #catalog-grid {
         display: flex;
-        width: 100%;
+        align-items: flex-start;
+        gap: 24px;
+        margin-top: 20px;
+        margin-left: 24px;
+        padding-left: 0;
 
-        #catalog-page-item-count {
-            color: var(--blue-dark, #03152D);
-            text-align: right;
-            font-family: Inter;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            margin-right: 64px;
-            margin-left: auto;
-            margin-top: 40px;
-        }
-
-        #tabs {
-            display: inline-flex;
-            align-items: flex-start;
-            gap: 20px;
-            padding-left: 24px;
-            padding-top: 30px;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
-        
-            .selected-tab {
-                display: flex;
-                padding: 10px;
-                align-items: flex-start;
-                border-bottom: 2px solid #A31F34;
-                color: var(--blue-dark, #03152D);
-                -webkit-transition-timing-function: ease-out;
-                -webkit-transition: 300ms;
-                transition-timing-function: ease-out;
-                transition: 300ms;
-            }
+        .catalog-item {
+            display: flex;
+            width: 312px;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 5px;
+            border: 1px solid var(--background-grey, #F0F5F7);
+            background: #FFF;
+            padding: 0;
             
-            .unselected-tab {
+            /* Dropshadow */
+            box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
+
+            img {
+                width: 100%;
+                height: 142px;
+                flex-shrink: 0;
+                border-radius: 5px 5px 0px 0px;
+                background: rgba(0, 0, 0, 0.20);
+            }
+
+            .catalog-item-description {
                 display: flex;
-                padding: 10px;
+                padding: 15px;
+                flex-direction: column;
                 align-items: flex-start;
-                color: var(--grey-secoundary, #8A8B8C);
-                -webkit-transition-timing-function: ease-out;
-                -webkit-transition: 300ms;
-                transition-timing-function: ease-out;
-                transition: 300ms;
+                gap: 15px;
+                align-self: stretch;
+
+                .start-date-description {
+                    align-self: stretch;
+                    overflow: hidden;
+                    color: var(--grey-text, #6F7175);
+                    text-overflow: ellipsis;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                }
+
+                .item-title {
+                    height: 36px;
+                    align-self: stretch;
+                    color: rgba(3, 21, 45, 0.85);
+                    /* Add elipses after 2 lines of title text */
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    
+                    /* CardTitle */
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: 18px; /* 128.571% */
+                }
             }
+        }
+    }
+
+    #catalog-page-item-count {
+        color: var(--blue-dark, #03152D);
+        text-align: right;
+        font-family: Inter;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-right: 64px;
+        margin-left: auto;
+        margin-top: 40px;
+        padding-right: 0;
+    }
+
+    #tabs {
+        display: inline-flex;
+        align-items: flex-start;
+        gap: 20px;
+        padding-left: 24px;
+        padding-top: 30px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    
+        .selected-tab {
+            display: flex;
+            padding: 10px;
+            align-items: flex-start;
+            border-bottom: 2px solid #A31F34;
+            color: var(--blue-dark, #03152D);
+            -webkit-transition-timing-function: ease-out;
+            -webkit-transition: 300ms;
+            transition-timing-function: ease-out;
+            transition: 300ms;
+        }
         
-            button {
-                background: none;
-                border: none;
-                padding: 0;
-                font: inherit;
-                color: inherit;
-                cursor: pointer;
-                outline: inherit;
-            }
+        .unselected-tab {
+            display: flex;
+            padding: 10px;
+            align-items: flex-start;
+            color: var(--grey-secoundary, #8A8B8C);
+            -webkit-transition-timing-function: ease-out;
+            -webkit-transition: 300ms;
+            transition-timing-function: ease-out;
+            transition: 300ms;
+        }
+    
+        button {
+            background: none;
+            border: none;
+            padding: 0;
+            font: inherit;
+            color: inherit;
+            cursor: pointer;
+            outline: inherit;
         }
     }
 
@@ -81,32 +150,33 @@
     
         #department-sidebar-link-list {
             padding-left: 0;
-        }
-    
-        .department-selected-link {
-            display: flex;
-            padding: 15px;
-            flex-direction: column;
-            gap: 10px;
-            align-self: stretch;
-            border-radius: 5px;
-            background: var(--red, #A31F34);
-            color: #FFF;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: normal;
-        }
-    
-        .department-link {
-            display: flex;
-            padding: 15px;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 10px;
-            align-self: stretch;
+        
+            .department-selected-link {
+                display: flex;
+                padding: 15px;
+                flex-direction: column;
+                gap: 10px;
+                align-self: stretch;
+                border-radius: 5px;
+                background: var(--red, #A31F34);
+                color: #FFF;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: normal;
+            }
+        
+            .department-link {
+                display: flex;
+                padding: 15px;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+                align-self: stretch;
+            }
         }
     }
+
 }
 #catalog-title {
     display: flex;
